--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+
 
         <!-- MapStruct -->
         <dependency>
